<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_toolbar"
    tools:context="com.amani.sdk.ui.activity.NFCScanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/id_scan_error_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/layout_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_above="@+id/button_id"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/error_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="19dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/id_scan_ready"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:srcCompat="@drawable/warning" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="96dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/ubuntu_medium"
                    android:lineHeight="24sp"
                    android:paddingLeft="30dp"
                    android:text="@string/tl_text"
                    android:textColor="@color/dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/ubuntu_medium"
                    android:lineHeight="24sp"
                    android:paddingLeft="23dp"
                    android:text="@string/package_text"
                    android:textColor="@color/dark" />


            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_above="@+id/bttn_exit"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/bttn_primary"
            android:fontFamily="@font/ubuntu_bold"
            android:text="Devam"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bttn_exit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bttn_secondary"
            android:fontFamily="@font/ubuntu_bold"
            android:text="Kurye Ziyaret Etsin"
            android:textAllCaps="false"
            android:textColor="@color/lightGray">

        </androidx.appcompat.widget.AppCompatButton>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container_bottom_id_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        >

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>